nullaway_error_d757cc84-47c6-4cbd-a4f6-3dec169d9553.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/GroupLayer.java:27: error: [NullAway] @NonNull field layers not initialized
  private List<ILayer> layers;
                       ^
    (see http://t.uber.com/nullaway )
